    - rse: added devtool/devtool.conf build environment helper
    - rse: pruned tree from third-party libraries (except for zlib, db and lua)
    - goeran: updated "sv" translation.
    - rse: cleaned up the "autogen.sh" scripts.
    - jbj: skip packages/headers with unverifiable signatures.
    - start rpm-5.0 development.

4.4.9 -> 4.5:
    - jbj: add _rpmhome macro, revector helper paths through _rpmhome.
    - jbj: hack a version into magic install path. better needs to be done.
    - jbj: start consistent versionlibdir usage in all Makefile.am files.
    - jbj: populate /usr/lib/rpm/@VERSION@/ instead of foo-@VERSION@ files.
    - jbj: move gendiff into the scripts directory.
    - jbj: don't include perl/CVS with "make dist".
    - jbj: remove rpmbuild and rpmb helper for now.
    - update README to point to new rpm5.org home.
    - upgrade to file-4.21 (CVE-2007-2026, CVE-2007-2799).
    - build against rpm5.org cvs,
    - fix: swap PART_INSTALL and PART_CLEAN automagic cleanup.
    - keys: add Getpass stub vector.
    - solaris: add clearenv stub.
    - fix: avoid accessing freed memory.
    - start rpm-4.5 development.

=============================================================================

4.4.8 -> 4.4.9:
	- start rpm-4.4.9 devel.
	- replace rpm2cpio with a shell script (#229422).
	- debugedit: canonicalize_path was broken (#232222).
	- permit clean scriptlet element overrides.
	- add RPMTAG_REPOTAG.
	- non-linux: avoid all mutexes if waitpid is used for reaping.
	- use pipe(2) for SIGCHLD receipt signalling.
	- python: teach labelCompare that missing epoch is same as 0 (#227860).
	- add source rpm file attributes, eliminate RPMBUILD_ISFOO.
	- populate sourceHeader with build restrictions early instead.
	- add --specsrpm to permit querying parsed source rpm header.
	- populate sourceHeader with source/patch tags for query (#227513).
	- make sure srpm header is initialized exactly once while refactoring.
	- add Keywords: and BuildPlatforms: syntax.