@@ -55,19 +55,6 @@
 /*@unchecked@*/
 static int httpTimeoutSecs = TIMEOUT_SECS;
 
-/**
- * Wrapper to free(3), hides const compilation noise, permit NULL, return NULL.
- * @param p		memory to free
- * @retval		NULL always
- */
-/*@unused@*/ static inline /*@null@*/ void *
-_free(/*@only@*/ /*@null@*/ /*@out@*/ const void * p)
-	/*@modifies p@*/
-{
-    if (p != NULL)	free((void *)p);
-    return NULL;
-}
-
 /* =============================================================== */
 int davFree(urlinfo u)
 	/*@globals internalState @*/
