@@ -835,6 +835,22 @@ int xstrncasecmp(const char *s1, const char * s2, size_t n)	/*@*/;
 /*@only@*/ /*@null@*/
 const char * xstrtolocale(/*@only@*/ const char *str)
 	/*@modifies *str @*/;
+
+#if !defined(SWIG)
+/**
+ * Wrapper to free(3), hides const compilation noise, permit NULL, return NULL.
+ * @param p		memory to free
+ * @return		NULL always
+ */
+/*@unused@*/ static inline /*@null@*/
+void * _free(/*@only@*/ /*@null@*/ /*@out@*/ const void * p)
+	/*@modifies p @*/
+{
+    if (p != NULL)	free((void *)p);
+    return NULL;
+}
+#endif
+
 #ifdef __cplusplus
 }
 #endif
