@@ -262,19 +262,6 @@ struct pgpValTbl_s pgpArmorKeyTbl[] = {
     { -1,			"Unknown armor key" }
 };
 
-/**
- * Wrapper to free(3), hides const compilation noise, permit NULL, return NULL.
- * @param p		memory to free
- * @return		NULL always
- */
-/*@unused@*/ static inline /*@null@*/ void *
-_free(/*@only@*/ /*@null@*/ /*@out@*/ const void * p)
-	/*@modifies p @*/
-{
-    if (p != NULL)	free((void *)p);
-    return NULL;
-}
-
 static void pgpPrtNL(void)
 	/*@globals fileSystem @*/
 	/*@modifies fileSystem @*/
